--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 # qdoc toolchain
 # TODO: some of this probably should be upstreamed to Qt's cmake files...
-# TODO replace with Qt5::qhelpgenerator for Qt >= 5.7.1
+# TODO replace with Qt::qhelpgenerator for Qt >= 5.7.1
 find_program(QHELPGEN_EXECUTABLE qhelpgenerator
   HINTS ${QT_INSTALL_BINS}
 )
