--- a/launcher/core/injector/CMakeLists.txt
+++ b/launcher/core/injector/CMakeLists.txt
@@ -1,13 +1,13 @@
-if(Qt5Widgets_FOUND)
+if(TARGET Qt::Widgets)
   set(gammaray_injector_style_srcs injectorstyleplugin.cpp)
 
   add_library(gammaray_injector_style MODULE ${gammaray_injector_style_srcs})
 
   target_link_libraries(gammaray_injector_style
-    Qt5::Core
-    Qt5::Gui
-    Qt5::Widgets
-    Qt5::GuiPrivate
+    Qt::Core
+    Qt::Gui
+    Qt::Widgets
+    Qt::GuiPrivate
   )
 
   set_target_properties(gammaray_injector_style
