--- a/plugins/guisupport/CMakeLists.txt
+++ b/plugins/guisupport/CMakeLists.txt
@@ -6,8 +6,11 @@ set(gammaray_guisupport_srcs
   ui.qrc
 )
 gammaray_add_plugin(gammaray_guisupport JSON gammaray_guisupport.json SOURCES ${gammaray_guisupport_srcs})
-target_link_libraries(gammaray_guisupport gammaray_core)
-target_link_libraries(gammaray_guisupport Qt5::Gui Qt5::GuiPrivate)
+target_link_libraries(gammaray_guisupport
+    gammaray_core
+    Qt::Gui
+    Qt::GuiPrivate
+)
 endif()
 
 # ui plugin
