--- a/plugins/qmlsupport/CMakeLists.txt
+++ b/plugins/qmlsupport/CMakeLists.txt
@@ -14,13 +14,13 @@ set(gammaray_qmlsupport_srcs
 gammaray_add_plugin(gammaray_qmlsupport JSON gammaray_qmlsupport.json SOURCES ${gammaray_qmlsupport_srcs})
 target_link_libraries(gammaray_qmlsupport
     gammaray_core
-    Qt5::Qml
-    Qt5::QmlPrivate
+    Qt::Qml
+    Qt::QmlPrivate
 )
 endif()
 
 
-if(NOT Qt5Qml_VERSION VERSION_LESS 5.10)
+if(NOT QtQml_VERSION VERSION_LESS 5.10)
     target_sources(gammaray_qmlsupport PUBLIC qmlbindingprovider.cpp)
 endif()
 
