--- a/plugins/qtivi/CMakeLists.txt
+++ b/plugins/qtivi/CMakeLists.txt
@@ -1,8 +1,8 @@
 # probe plugin
 if (NOT GAMMARAY_CLIENT_ONLY_BUILD)
-if(Qt5IviCore_FOUND)
+if(TARGET Qt::IviCore)
     set(plugin_files qtivisupport.cpp)
-    if(Qt5IviCore_VERSION VERSION_GREATER 1.1)
+    if(QtIviCore_VERSION VERSION_GREATER 1.1)
         add_definitions(-DQTIVI_DISABLE_IVIPROPERTIES)
         set(plugin_files ${plugin_files} qtiviobjectmodel.cpp)
     else()
@@ -11,14 +11,14 @@ if(Qt5IviCore_FOUND)
     gammaray_add_plugin(gammaray_qtivi JSON gammaray_qtivi.json SOURCES ${plugin_files})
     target_link_libraries(gammaray_qtivi
         gammaray_core
-        Qt5::IviCore
-        Qt5::IviCorePrivate
+        Qt::IviCore
+        Qt::IviCorePrivate
     )
-    if(Qt5IviVehicleFunctions_FOUND)
-        target_link_libraries(gammaray_qtivi Qt5::IviVehicleFunctions)
+    if(TARGET Qt::IviVehicleFunctions)
+        target_link_libraries(gammaray_qtivi Qt::IviVehicleFunctions)
     endif()
-    if(Qt5IviMedia_FOUND)
-        target_link_libraries(gammaray_qtivi Qt5::IviMedia)
+    if(TARGET QtIviMedia)
+        target_link_libraries(gammaray_qtivi Qt::IviMedia)
     endif()
 endif()
 endif()
