--- a/plugins/translatorinspector/CMakeLists.txt
+++ b/plugins/translatorinspector/CMakeLists.txt
@@ -4,7 +4,7 @@ gammaray_add_plugin(gammaray_translatorinspector
   JSON gammaray_translatorinspector.json
   SOURCES translatorinspector.cpp translatorinspectorinterface.cpp translatorwrapper.cpp translatorsmodel.cpp
 )
-target_link_libraries(gammaray_translatorinspector gammaray_core Qt5::Core Qt5::CorePrivate)
+target_link_libraries(gammaray_translatorinspector gammaray_core Qt::Core Qt::CorePrivate)
 endif()
 
 # ui part
