--- a/plugins/wlcompositorinspector/CMakeLists.txt
+++ b/plugins/wlcompositorinspector/CMakeLists.txt
@@ -3,7 +3,7 @@ if (NOT GAMMARAY_CLIENT_ONLY_BUILD)
 find_package(Wayland 1.12 COMPONENTS Server)
 set_package_properties(Wayland PROPERTIES PURPOSE "Needed for the QtWayland compositor inspector plug-in." TYPE OPTIONAL)
 
-if(Qt5WaylandCompositor_FOUND AND Wayland_FOUND)
+if(TARGET Qt::WaylandCompositor AND Wayland_FOUND)
   set(gammaray_wlcompositorinspector_srcs
     wlcompositorinspector.cpp
     wlcompositorinterface.cpp
@@ -15,7 +15,7 @@ if(Qt5WaylandCompositor_FOUND AND Wayland_FOUND)
     ${gammaray_wlcompositorinspector_srcs}
   )
   target_link_libraries(gammaray_wlcompositorinspector
-    gammaray_core gammaray_kitemmodels Qt5::WaylandCompositor Wayland::Server)
+    gammaray_core gammaray_kitemmodels Qt::WaylandCompositor Wayland::Server)
 
 endif()
 endif()
@@ -37,7 +37,7 @@ if(GAMMARAY_BUILD_UI AND (NOT MSVC OR NOT MSVC_VERSION LESS 1800)) # at least MS
 
 
   target_link_libraries(gammaray_wlcompositorinspector_ui
-    Qt5::Widgets
+    Qt::Widgets
     gammaray_common
     gammaray_ui
   )
