Split OpenGL type support into its own plugin
These types have been moved to a separate library in Qt6, so we have to
follow that in order to not pull in Qt::OpenGL into every GUI application.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -360,6 +360,7 @@ find_package(Qt${Qt_VERSION_MAJOR} NO_MODULE QUIET OPTIONAL_COMPONENTS
   Concurrent
   Designer
   Location
+  OpenGL
   Positioning
   PrintSupport
   Qml
