--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -25,6 +25,9 @@ if(TARGET Qt::Gui)
   add_subdirectory(guisupport)
   add_subdirectory(textdocumentinspector)
 endif()
+if(TARGET Qt5::Gui OR TARGET Qt6::OpenGL)
+  add_subdirectory(openglsupport)
+endif()
 
 if(TARGET Qt::Widgets)
   add_subdirectory(actioninspector)
